force-app/main/default/objects/Scheme_Settings__c/Scheme_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Diagio Scheme Template</label>
</CustomObject>