force-app/main/default/objects/Scheme_Settings__c/fields/Fixed_Scheme_Entitlements__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Scheme_Entitlements__c</fullName>
    <label>Fixed_Scheme_Entitlements</label>
    <length>50</length>
    <type>Text</type>
</CustomField>