force-app/main/default/objects/Scheme_Settings__c/fields/Global_Budget__c.field-meta.xml
<CustomField>
    <fullName>Global_Budget__c</fullName>
    <label>Global_Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>