force-app/main/default/objects/Scheme_Settings__c/fields/Scheme_Duration__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Duration__c</fullName>
    <label>Scheme Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>