force-app/main/default/objects/Scheme_Settings__c/fields/Scheme_Global_Budget__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Global_Budget__c</fullName>
    <defaultValue>200000</defaultValue>
    <label>Scheme Global Budget</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>