force-app/main/default/objects/Scheme_Settings__c/fields/Scheme_Lower_Limit__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Lower_Limit__c</fullName>
    <label>Scheme Lower Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>